--- a/Landing Page/index.html
+++ b/Landing Page/index.html
@@ -39,7 +39,7 @@
         <!-- Masthead-->
         <header class="masthead">
             <div class="container">
-                <div class="masthead-subheading">Salvemos nuestra plaga </div>
+                <div class="masthead-subheading">Let's save our plague </div>
                 <div class="masthead-heading text-uppercase">help the fat animal</div>
                 <a class="btn btn-primary btn-xl text-uppercase" href="#services">Tell Me More</a>
             </div>
@@ -112,8 +112,8 @@
                                 <img class="img-fluid" src="assets/img/portfolio/2.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Explore</div>
-                                <div class="portfolio-caption-subheading text-muted">Graphic Design</div>
+                                <div class="portfolio-caption-heading">About what we do</div>
+                                <div class="portfolio-caption-subheading text-muted">what we do with your money</div>
                             </div>
                         </div>
                     </div>
@@ -127,8 +127,8 @@
                                 <img class="img-fluid" src="assets/img/portfolio/3.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Finish</div>
-                                <div class="portfolio-caption-subheading text-muted">Identity</div>
+                                <div class="portfolio-caption-heading">Where to visit us</div>
+                                <div class="portfolio-caption-subheading text-muted">habitat of our animals</div>
                             </div>
                         </div>
                     </div>
