--- a/Landing Page/index.html
+++ b/Landing Page/index.html
@@ -142,8 +142,8 @@
                                 <img class="img-fluid" src="assets/img/portfolio/4.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Lines</div>
-                                <div class="portfolio-caption-subheading text-muted">Branding</div>
+                                <div class="portfolio-caption-heading">our photographers</div>
+                                <div class="portfolio-caption-subheading text-muted">the art of hippo photography</div>
                             </div>
                         </div>
                     </div>
