--- a/Landing Page/index.html
+++ b/Landing Page/index.html
@@ -42,6 +42,7 @@
                 <div class="masthead-subheading">Let's save our plague </div>
                 <div class="masthead-heading text-uppercase">help the fat animal</div>
                 <a class="btn btn-primary btn-xl text-uppercase" href="#services">Tell Me More</a>
+         
             </div>
         </header>
         <!-- Services-->
@@ -83,8 +84,8 @@
         <section class="page-section bg-light" id="portfolio">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Portfolio</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading text-uppercase">What you can help or invest in</h2>
+                    <h3 class="section-subheading text-muted">help us with the fat animal</h3>
                 </div>
                 <div class="row">
                     <div class="col-lg-4 col-sm-6 mb-4">
@@ -157,8 +158,8 @@
                                 <img class="img-fluid" src="assets/img/portfolio/5.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Southwest</div>
-                                <div class="portfolio-caption-subheading text-muted">Website Design</div>
+                                <div class="portfolio-caption-heading">download our sound list</div>
+                                <div class="portfolio-caption-subheading text-muted">youtube</div>
                             </div>
                         </div>
                     </div>
@@ -172,8 +173,8 @@
                                 <img class="img-fluid" src="assets/img/portfolio/6.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Window</div>
-                                <div class="portfolio-caption-subheading text-muted">Photography</div>
+                                <div class="portfolio-caption-heading">sponsor a hippopotamus</div>
+                                <div class="portfolio-caption-subheading text-muted">receives name, age, weight, build</div>
                             </div>
                         </div>
                     </div>
