--- a/Landing Page/index.html
+++ b/Landing Page/index.html
@@ -49,8 +49,8 @@
         <section class="page-section" id="services">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Services</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading text-uppercase">your money is safe</h2>
+                    <h3 class="section-subheading text-muted">This is what will happen to him</h3>
                 </div>
                 <div class="row text-center">
                     <div class="col-md-4">
@@ -58,24 +58,24 @@
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
                             <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
                         </span>
-                        <h4 class="my-3">E-Commerce</h4>
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                        <h4 class="my-3">Enter your contribution to this community</h4>
+                        <p class="text-muted">will arrive at our site, and will be validated by the experts</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
                             <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
                         </span>
-                        <h4 class="my-3">Responsive Design</h4>
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                        <h4 class="my-3">You will receive the name and weight of the fat animal you sponsored.</h4>
+                        <p class="text-muted">You will see everything about our hippos reflected in the place</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
                             <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
                         </span>
-                        <h4 class="my-3">Web Security</h4>
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                        <h4 class="my-3">invoices</h4>
+                        <p class="text-muted">receive the invoice and the amount of your contribution</p>
                     </div>
                 </div>
             </div>
@@ -185,28 +185,29 @@
         <section class="page-section" id="about">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">About</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading text-uppercase">history</h2>
+                    <h3 class="section-subheading text-muted">The story of Pablo Escobar's hippos: Why are there hippos in Colombia? The answer lies with Pablo Escobar</h3>
                 </div>
                 <ul class="timeline">
                     <li>
                         <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/1.jpg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>2009-2011</h4>
-                                <h4 class="subheading">Our Humble Beginnings</h4>
+                                <h4>It's been more than 40 years since then,</h4>
+                                <h4 class="subheading">But Hacienda Nápoles - that's the name of the mansion - continues to operate, no longer as a symbol of the ostentation of the most famous drug trafficker, but as a natural tourist park that plays a fundamental role in the conservation of the biodiversity of the Magdalena Medio, in Antioquia.</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
+                            <div class="timeline-body"><p class="text-muted"> How did the hippos arrive in Colombia?
+                                They did not come directly from Africa, although that would not have surprised anyone who knows the eccentric way in which the capo acted. The four specimens, one male and three females, were actually transferred to Colombia from a zoo in the United States in the 1980s.</p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
                         <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/2.jpg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>March 2011</h4>
-                                <h4 class="subheading">An Agency is Born</h4>
+                                <h4>How many hippos are there in Colombia now?</h4>
+                                <h4 class="subheading">The current number is 169 copies. However, the number continues to grow,</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
+                            <div class="timeline-body"><p class="text-muted">The reason is that hippos have found in Colombia a paradisiacal ecosystem that is ideal for their reproduction. So much so that, according to data from the Ministry of Environment and Sustainable Development of the country, it is estimated that by 2035 the number will rise to more than 1,000 if their population is not controlled.</p></div>
                         </div>
                     </li>
                     <li>
