--- a/Landing Page/index.html
+++ b/Landing Page/index.html
@@ -763,30 +763,22 @@
               <div class="col-lg-8">
                 <div class="modal-body">
                   <!-- Project details-->
-                  <h2 class="text-uppercase">Project Name</h2>
+                  <h2 class="text-uppercase">thanks for supporting</h2>
                   <p class="item-intro text-muted">
-                    Lorem ipsum dolor sit amet consectetur.
+                    help us with what is so fat and beautiful
                   </p>
                   <img
                     class="img-fluid d-block mx-auto"
                     src="assets/img/portfolio/1.jpg"
                     alt="..."
                   />
-                  <p>
-                    Use this area to describe your project. Lorem ipsum dolor
-                    sit amet, consectetur adipisicing elit. Est blanditiis
-                    dolorem culpa incidunt minus dignissimos deserunt repellat
-                    aperiam quasi sunt officia expedita beatae cupiditate,
-                    maiores repudiandae, nostrum, reiciendis facere nemo!
-                  </p>
+                  <p>we will take care of sterilizing all hippo</p>
                   <ul class="list-inline">
                     <li>
-                      <strong>Client:</strong>
-                      Threads
+                      <strong></strong>
                     </li>
                     <li>
-                      <strong>Category:</strong>
-                      Illustration
+                      <strong></strong>
                     </li>
                   </ul>
                   <button
@@ -795,7 +787,7 @@
                     type="button"
                   >
                     <i class="fas fa-xmark me-1"></i>
-                    Close Project
+                    Close
                   </button>
                 </div>
               </div>
@@ -822,9 +814,9 @@
               <div class="col-lg-8">
                 <div class="modal-body">
                   <!-- Project details-->
-                  <h2 class="text-uppercase">Project Name</h2>
+                  <h2 class="text-uppercase">what we do</h2>
                   <p class="item-intro text-muted">
-                    Lorem ipsum dolor sit amet consectetur.
+                    YOUR MONEY IS IN GOOD HANDS
                   </p>
                   <img
                     class="img-fluid d-block mx-auto"
@@ -832,19 +824,15 @@
                     alt="..."
                   />
                   <p>
-                    Use this area to describe your project. Lorem ipsum dolor
-                    sit amet, consectetur adipisicing elit. Est blanditiis
-                    dolorem culpa incidunt minus dignissimos deserunt repellat
-                    aperiam quasi sunt officia expedita beatae cupiditate,
-                    maiores repudiandae, nostrum, reiciendis facere nemo!
+                    We will do everything possible to retain- not kill the
+                    hippos
                   </p>
                   <ul class="list-inline">
                     <li>
-                      <strong>Client:</strong>
-                      Explore
+                      <strong></strong>
                     </li>
                     <li>
-                      <strong>Category:</strong>
+                      <strong></strong>
                       Graphic Design
                     </li>
                   </ul>
@@ -881,30 +869,20 @@
               <div class="col-lg-8">
                 <div class="modal-body">
                   <!-- Project details-->
-                  <h2 class="text-uppercase">Project Name</h2>
-                  <p class="item-intro text-muted">
-                    Lorem ipsum dolor sit amet consectetur.
-                  </p>
+                  <h2 class="text-uppercase">Where to visit us</h2>
+                  <p class="item-intro text-muted"></p>
                   <img
                     class="img-fluid d-block mx-auto"
                     src="assets/img/portfolio/3.jpg"
                     alt="..."
                   />
-                  <p>
-                    Use this area to describe your project. Lorem ipsum dolor
-                    sit amet, consectetur adipisicing elit. Est blanditiis
-                    dolorem culpa incidunt minus dignissimos deserunt repellat
-                    aperiam quasi sunt officia expedita beatae cupiditate,
-                    maiores repudiandae, nostrum, reiciendis facere nemo!
-                  </p>
+                  <p>places around the world.</p>
                   <ul class="list-inline">
                     <li>
-                      <strong>Client:</strong>
-                      Finish
+                      <strong></strong>
                     </li>
                     <li>
-                      <strong>Category:</strong>
-                      Identity
+                      <strong></strong>
                     </li>
                   </ul>
                   <button
@@ -913,7 +891,7 @@
                     type="button"
                   >
                     <i class="fas fa-xmark me-1"></i>
-                    Close Project
+                    Close
                   </button>
                 </div>
               </div>
@@ -940,30 +918,23 @@
               <div class="col-lg-8">
                 <div class="modal-body">
                   <!-- Project details-->
-                  <h2 class="text-uppercase">Project Name</h2>
-                  <p class="item-intro text-muted">
-                    Lorem ipsum dolor sit amet consectetur.
-                  </p>
+                  <h2 class="text-uppercase">all authors of the images</h2>
+                  <p class="item-intro text-muted"></p>
                   <img
                     class="img-fluid d-block mx-auto"
                     src="assets/img/portfolio/4.jpg"
                     alt="..."
                   />
                   <p>
-                    Use this area to describe your project. Lorem ipsum dolor
-                    sit amet, consectetur adipisicing elit. Est blanditiis
-                    dolorem culpa incidunt minus dignissimos deserunt repellat
-                    aperiam quasi sunt officia expedita beatae cupiditate,
-                    maiores repudiandae, nostrum, reiciendis facere nemo!
+                    Help us with a contribution so that the images of the
+                    hippopotamus are recognized not as a plague
                   </p>
                   <ul class="list-inline">
                     <li>
-                      <strong>Client:</strong>
-                      Lines
+                      <strong></strong>
                     </li>
                     <li>
-                      <strong>Category:</strong>
-                      Branding
+                      <strong></strong>
                     </li>
                   </ul>
                   <button
@@ -972,7 +943,7 @@
                     type="button"
                   >
                     <i class="fas fa-xmark me-1"></i>
-                    Close Project
+                    Close
                   </button>
                 </div>
               </div>
@@ -999,25 +970,19 @@
               <div class="col-lg-8">
                 <div class="modal-body">
                   <!-- Project details-->
-                  <h2 class="text-uppercase">Project Name</h2>
-                  <p class="item-intro text-muted">
-                    Lorem ipsum dolor sit amet consectetur.
-                  </p>
+                  <h2 class="text-uppercase">
+                    listen to all our lists of hippo sounds
+                  </h2>
+                  <p class="item-intro text-muted"></p>
                   <img
                     class="img-fluid d-block mx-auto"
                     src="assets/img/portfolio/5.jpg"
                     alt="..."
                   />
-                  <p>
-                    Use this area to describe your project. Lorem ipsum dolor
-                    sit amet, consectetur adipisicing elit. Est blanditiis
-                    dolorem culpa incidunt minus dignissimos deserunt repellat
-                    aperiam quasi sunt officia expedita beatae cupiditate,
-                    maiores repudiandae, nostrum, reiciendis facere nemo!
-                  </p>
+                  <p>on all social networks</p>
                   <ul class="list-inline">
                     <li>
-                      <strong>Client:</strong>
+                      <strong></strong>
                       Southwest
                     </li>
                     <li>
@@ -1031,7 +996,7 @@
                     type="button"
                   >
                     <i class="fas fa-xmark me-1"></i>
-                    Close Project
+                    Close
                   </button>
                 </div>
               </div>
@@ -1067,21 +1032,13 @@
                     src="assets/img/portfolio/6.jpg"
                     alt="..."
                   />
-                  <p>
-                    Use this area to describe your project. Lorem ipsum dolor
-                    sit amet, consectetur adipisicing elit. Est blanditiis
-                    dolorem culpa incidunt minus dignissimos deserunt repellat
-                    aperiam quasi sunt officia expedita beatae cupiditate,
-                    maiores repudiandae, nostrum, reiciendis facere nemo!
-                  </p>
+                  <p></p>
                   <ul class="list-inline">
                     <li>
-                      <strong>Client:</strong>
-                      Window
+                      <strong></strong>
                     </li>
                     <li>
-                      <strong>Category:</strong>
-                      Photography
+                      <strong></strong>
                     </li>
                   </ul>
                   <button
@@ -1090,7 +1047,7 @@
                     type="button"
                   >
                     <i class="fas fa-xmark me-1"></i>
-                    Close Project
+                    Close
                   </button>
                 </div>
               </div>
