--- a/Landing Page/index.html
+++ b/Landing Page/index.html
@@ -457,8 +457,8 @@
                 src="assets/img/team/1.jpg"
                 alt="..."
               />
-              <h4>Parveen Anand</h4>
-              <p class="text-muted">Lead Designer</p>
+              <h4>Lupita Carmen</h4>
+              <p class="text-muted">in charge of sterilization</p>
               <a
                 class="btn btn-dark btn-social mx-2"
                 href="#!"
@@ -487,7 +487,7 @@
                 alt="..."
               />
               <h4>Diana Petersen</h4>
-              <p class="text-muted">Lead Marketer</p>
+              <p class="text-muted">photographer</p>
               <a
                 class="btn btn-dark btn-social mx-2"
                 href="#!"
@@ -516,7 +516,7 @@
                 alt="..."
               />
               <h4>Larry Parker</h4>
-              <p class="text-muted">Lead Developer</p>
+              <p class="text-muted">programmer</p>
               <a
                 class="btn btn-dark btn-social mx-2"
                 href="#!"
@@ -541,9 +541,7 @@
         <div class="row">
           <div class="col-lg-8 mx-auto text-center">
             <p class="large text-muted">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut
-              eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam
-              corporis ea, alias ut unde.
+              our group of hippo saviors
             </p>
           </div>
         </div>
@@ -596,9 +594,9 @@
     <section class="page-section" id="contact">
       <div class="container">
         <div class="text-center">
-          <h2 class="section-heading text-uppercase">Contact Us</h2>
+          <h2 class="section-heading text-uppercase">personal data</h2>
           <h3 class="section-subheading text-muted">
-            Lorem ipsum dolor sit amet consectetur.
+            Give us your information to send you the invoice
           </h3>
         </div>
         <!-- * * * * * * * * * * * * * * *-->
@@ -713,7 +711,7 @@
       <div class="container">
         <div class="row align-items-center">
           <div class="col-lg-4 text-lg-start">
-            Copyright &copy; Your Website 2023
+            Copyright &copy; Juan Jose Calderon Benjumea 2023
           </div>
           <div class="col-lg-4 my-3 my-lg-0">
             <a
@@ -842,7 +840,7 @@
                     type="button"
                   >
                     <i class="fas fa-xmark me-1"></i>
-                    Close Project
+                    Close 
                   </button>
                 </div>
               </div>
